# aioli

./: .gitignore  LICENSE  MANIFEST.in  Readme.md  requirements-dev.txt  setup.cfg  setup.py
aioli/: __init__.py
test/: test.py
