[metadata]
name = aioli
author = brettatoms
author-email = brettatoms@gmail.com
summary = AsyncIO Web Framework
description-file = Readme.md
license = 
classifier =
    Development Status :: 4 - Beta
        Environment :: Other Environment
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages = aioli

