[metadata]
name = aioli
author = brettatoms
author-email = brettatoms@gmail.com
summary = AsyncIO Web Framework
description-file = Readme.md
license = 
classifier =
    Development Status :: 4 - Beta
        Environment :: Other Environment
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3
keywords =
    aioli
    async
    asyncio
    concurrency
    concurrent
    
# [bdist_wheel]
# universal=1
    
[files]
packages = aioli


[pytest]
#addopts = -rsxX -q
python_files = test/test*.py
python_paths = .
